--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
+    "sweetalert2": "^11.21.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
